# anttsy

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  anttsy.ipynb  pyproject.toml
src/anttsy/: __init__.py  bit4.py  bit4w.py  bit8.py  bit8w.py  eight_bit.py  four_bit.py  utils.py
