[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.21.1"]

[project]
name = "anttsy"
requires-python = ">=3.8.0"
version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/anttsy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = [
  "D",
  "S",
  "TD",
  "FIX",
  "E501",
  "INP",
  "T201",
  "ANN",
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
